--- a/package.json
+++ b/package.json
@@ -13,14 +13,15 @@
     "@nomiclabs/hardhat-ethers": "^2.0.5",
     "@nomiclabs/hardhat-waffle": "^2.0.2",
     "@openzeppelin/contracts": "^4.5.0",
-    "axios": "^0.26.0",
+    "axios": "^0.26.1",
     "chai": "^4.3.6",
     "dotenv": "^16.0.1",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.5.4",
+    "form-data": "^4.0.0",
     "hardhat": "^2.8.4",
-    "ipfs-http-client": "^56.0.1",
-    "next": "11.0.1",
+    "ipfs-http-client": "^56.0.3",
+    "next": "^12.1.6",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "web3modal": "^1.9.5"
